--- a/.github/workflows/push-image.yaml
+++ b/.github/workflows/push-image.yaml
@@ -4,6 +4,11 @@ on:
   push:
     branches:
       - main
+    paths:
+      - '*.go'
+      - 'Dockerfile'
+      - 'go.mod'
+      - 'go.sum'
 
 permissions:
   contents: read
