--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,11 +9,28 @@ permissions:
   contents: read
 
 jobs:
+  check-source-change:
+    runs-on: ubuntu-latest
+    permissions:
+      pull-requests: read
+    steps:
+      - uses: dorny/paths-filter@v3
+        id: filter
+        with:
+          filters: |
+            code-change:
+              - '**.go'
+              - 'go.mod'
+              - 'go.sum'
+              - 'Dockerfile'
+
   build-image:
     runs-on: ubuntu-latest
+    needs: check-source-change
+    if: ${{ needs.check-source-change.outputs.code-change == 'true'}}
     steps:
       - name: checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: setup buildx
         uses: docker/setup-buildx-action@v3
